cw/cw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cw-clusterip
  namespace: cw
spec:
  type: ClusterIP
  selector:
    app: cw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
