cw/cw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cw-ingress
  namespace: cw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spring.noname2048.com
      secretName: cw-tls
  rules:
    - host: spring.noname2048.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cw-clusterip
                port:
                  number: 80
